Implemented authentification with sanctum
