# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AuthController;
 use Illuminate\Support\Facades\Route;
 use Illuminate\Http\Request;
 use App\Http\Controllers\OpenFoodFactsController;
@@ -18,40 +19,40 @@ use App\Http\Controllers\ProductController;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
-
 Route::prefix('/off')->group(function () {
     $controller = OpenFoodFactsController::class;
-
     Route::get('/food/search/{query}/{page}', [$controller, 'search']);
     Route::get('/food/{id}', [$controller, 'show']);
 });
 
 Route::prefix('/fdc')->group(function () {
     $controller = FoodDataCentralController::class;
-
     Route::get('/food/search/{query}/{page}', [$controller, 'search']);
     Route::get('/food/{id}', [$controller, 'show']);
 });
 
-Route::prefix('/products')->group(function () {
-    $controller = ProductController::class;
+Route::post('/register', [AuthController::class, 'register'])->name('register');
+Route::post('/login', [AuthController::class, 'login'])->name('login');
 
-    Route::get('/', [$controller, 'index']);
-    Route::get('/{product}', [$controller, 'show']);
-    Route::post('/', [$controller, 'store']);
-    Route::put('/{product}', [$controller, 'update']);
-    Route::delete('/{product}', [$controller, 'destroy']);
-});
+Route::middleware('auth:sanctum')->group(function () {
+    Route::middleware('auth:sanctum')->get('/user', [AuthController::class, 'user']);
+    Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout'])->name('logout');
+    
+    Route::prefix('/products')->group(function () {
+        $controller = ProductController::class;
+        Route::get('/', [$controller, 'index']);
+        Route::get('/{product}', [$controller, 'show']);
+        Route::post('/', [$controller, 'store']);
+        Route::put('/{product}', [$controller, 'update']);
+        Route::delete('/{product}', [$controller, 'destroy']);
+    });
 
-Route::prefix('/intakes')->group(function () {
-    $controller = IntakeController::class;
-
-    Route::get('/', [$controller, 'index']);
-    Route::get('/{intake}', [$controller, 'show']);
-    Route::post('/', [$controller, 'store']);
-    Route::put('/{intake}', [$controller, 'update']);
-    Route::delete('/{intake}', [$controller, 'destroy']);
+    Route::prefix('/intakes')->group(function () {
+        $controller = IntakeController::class;
+        Route::get('/', [$controller, 'index']);
+        Route::get('/{intake}', [$controller, 'show']);
+        Route::post('/', [$controller, 'store']);
+        Route::put('/{intake}', [$controller, 'update']);
+        Route::delete('/{intake}', [$controller, 'destroy']);
+    });
 });
